# simple-producer-consumer

./: README.md  consumer.dockerfile  consumer.py  docker-compose.yml  producer.dockerfile  producer.py  pyproject.toml
