[tool.poetry]
name = "xcang"
version = "0.1.0"
description = ""
authors = ["ekilyas"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
aio-pika = "^8.2.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.consumer.dependencies]
aio-pika = "^8.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
